Bug 633746 - crash [@ nsMsgDBView::SelectionChanged()] in quick filter or when using AttachmentExtractor extension. r=rkent a=mkmelin CLOSED TREE